infrastructure/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask_app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask_app
  template:
    metadata:
      labels:
        app: flask_app
    spec:
      containers:
        - name: flask_app
          image: stepangavrilov/flask_app:latest
          ports:
            - containerPort: 5000
