infrastructure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask_app
spec:
  selector:
    app: flask_app
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
