infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask_app
spec:
  rules:
    - host: flask_app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:flask_app
                port:
                  number: 5000
